--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -31,6 +31,11 @@
               <a href="{% url 'posts:profile' post.author.username %}">все посты пользователя</a>
                
             </li>
+            <li class="list-group-item">
+            {% if owner_of_post %}
+              <a href="{% url 'posts:post_edit' post.pk %}">редактирование поста</a>
+            {% endif %}
+             </li>
           </ul>
         </aside>
         <article class="col-12 col-md-9">
