--- a/yatube/templates/users/password_reset_confirm.html
+++ b/yatube/templates/users/password_reset_confirm.html
@@ -2,6 +2,7 @@
 {% block title %}Новый пароль{% endblock %}
 {% block content %}
 {% load user_filters %}
+{% if validlink %}
 <div class="container py-5"> 
   <div class="row justify-content-center">
     <div class="col-md-8 p-5">
@@ -39,12 +40,12 @@
               </button>
             </div>
           </form>
-        </div> <!-- card body -->
-      </div> <!-- card -->
-    </div> <!-- col -->
-  </div> <!-- row -->
-  <!-- если использована неправильная ссылка -->
-  {% if validlink %}
+        </div> 
+      </div> 
+    </div>
+  </div>
+ 
+  {% else %}
   <div class="row justify-content-center">
     <div class="col-md-8 p-5">
       <div class="card">
@@ -53,11 +54,11 @@
         </div>
         <div class="card-body">
           <p>Ссылка сброса пароля содержит ошибку или устарела.</p>
-        </div> <!-- card body -->
-      </div> <!-- card -->
-    </div> <!-- col -->
-  </div> <!-- row -->
-  <!-- конец если использована неправильная ссылка -->
+        </div> 
+      </div> 
+    </div> 
+  </div> 
+  
   {% endif %}
 </div>
 {% endblock %}
