--- a/yatube/templates/about/author.html
+++ b/yatube/templates/about/author.html
@@ -2,6 +2,8 @@
 {% block title %}Об авторе проекта{% endblock %}
 {% block content %}
 <h1>Привет, я автор</h1>
+<p>{{ just_title }}</p>
+<p>{{ just_text }}</p>
 <p>
   Тут я размещу информацию о себе используя свои умения верстать.
   Картинки, блоки, элементы бустрап. А может быть, просто напишу несколько абзацев текста. 
