--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -4,9 +4,14 @@
 {% endblock %} 
 
 {% block content %}
+{% if perms.posts.can_read_this %}
+    <!-- We can mark a BookInstance as returned. -->
+    <!-- Perhaps add code to link to a "book return" view here. -->
   <div class="container py-5">
   
-  
+
+
+
       <div class="row">
         <aside class="col-12 col-md-3">
           <ul class="list-group list-group-flush">
@@ -42,6 +47,8 @@
           <p>{{ post.text }}</p>
         </article>
       </div> 
-    
+      {% else %}
+      <h1> FUCK </h1>
+    {% endif %}
     {% endblock %}
     
